methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:4: error: value * is not a member of Unit
    backward()*stepCount
              ^