methods.args.MethodsArgs.scala.code
def move(stepCount:Int,forward:Boolean){
  if(forward==true){
    backward()*stepCount
  }else{
    backward()
  }
}